bug: firefox do not line break on long messages

--- a/client/themes/carbon/jquery.phpfreechat.full.less
+++ b/client/themes/carbon/jquery.phpfreechat.full.less
@@ -511,7 +511,7 @@ div.pfc-content {
         padding: 0; margin: 0;
         padding-left: @message-padding-left;
         word-wrap: break-word;
-        white-space: pre;
+        white-space: pre-wrap;
         font-size: @messages-message-font-size;
         font-family: @messages-message-font-family;
         font-weight: @messages-message-font-weight;
